Fix avatar image on Firefox.

--- a/interfaces/web_desktop/apps/Account/Css/main.css
+++ b/interfaces/web_desktop/apps/Account/Css/main.css
@@ -106,8 +106,8 @@
 
 #AvatarArea #Avatar
 {
-	width: 256px;
-	height: 256px;
+	width: 128px;
+	height: 128px;
 	zoom: 0.5;
 }
 
